syntax = "proto3";

package ref.parse;
import "google/protobuf/timestamp.proto";


option java_package = "com.examples.protobuf.map";
option java_multiple_files = true;

message MessageType {
  bool boolValue = 1;
  string stringValue = 2;
  bytes bytesValue = 3;
  int32 int32Value = 4;
  fixed32 fixed32Value = 5;
  uint32 uint32Value = 6;
  int64 int64Value = 7;
  fixed64 fixed64Value = 8;
  uint64 uint64Value = 9;
  float floatValue = 10;
  double doubleValue = 11;
  EnumType enumValue = 12;
  ReferenceMessageType referenceValue = 13;
}

message MapMessageType {
  map<bool, bool> boolValue = 1;
  map<string, string> stringValue = 2;
  map<string, bytes> bytesValue = 3;
  map<int32, int32> int32Value = 4;
  map<fixed32, fixed32> fixed32Value = 5;
  map<uint32, uint32> uint32Value = 6;
  map<int64, int64> int64Value = 7;
  map<fixed64, fixed64> fixed64Value = 8;
  map<uint64, uint64> uint64Value = 9;
  map<string, float> floatValue = 10;
  map<string, double> doubleValue = 11;
  map<string, EnumType> enumValue = 12;
  map<string, ReferenceMessageType> referenceValue = 13;
}

message ListMessageType {
  repeated bool boolValue = 1;
  repeated string stringValue = 2;
  repeated bytes bytesValue = 3;
  repeated int32 int32Value = 4;
  repeated fixed32 fixed32Value = 5;
  repeated uint32 uint32Value = 6;
  repeated int64 int64Value = 7;
  repeated fixed64 fixed64Value = 8;
  repeated uint64 uint64Value = 9;
  repeated float floatValue = 10;
  repeated double doubleValue = 11;
  repeated EnumType enumValue = 12;
  repeated ReferenceMessageType referenceValue = 13;
}

enum EnumType {
  A = 0;
  B = 1;
  C = 2;
  D = 4;
}

message ReferenceMessageType {
    string string = 1;
    repeated  string list = 2;
    map<string, string> map = 3;
}